fixes teaser view on mobile

--- a/less/page.less
+++ b/less/page.less
@@ -2756,6 +2756,7 @@ Responsive below
   table.responsive3 tbody tr {
     padding: 0;
   }
+  .teaser .field-type-image {float:none}
 }
 
 @media only screen and (min-width: 480px) and (max-width: 599px) {
